<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.user.impermission.IMPermissionActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cons_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_base"
            android:minHeight="42dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="38dp"
                android:layout_height="42dp"
                android:layout_marginLeft="10dp"
                android:padding="10dp"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/im_permission_title"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_describe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/im_permission_describe"
            android:padding="15dp"
            android:textSize="13sp"
            android:textColor="@color/base_edit_text"
            android:background="@color/gray_view_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cons_head" />

        <TextView
            android:id="@+id/tv_sub_title1"
            style="@style/permission_sub_title"
            android:text="@string/im_permission_sub_title1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_describe" />

        <TextView
            android:id="@+id/tv_sub_describe1"
            style="@style/permission_sub_describe1"
            android:text="@string/im_permission_sub_describe1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sub_title1" />

        <View
            android:id="@+id/line1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/gray_divider_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sub_describe1" />

        <TextView
            android:id="@+id/tv_sub_title2"
            style="@style/permission_sub_title"
            android:text="@string/im_permission_sub_title2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line1" />

        <TextView
            android:id="@+id/tv_sub_title2_set"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginEnd="15dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="12dp"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:background="@drawable/shape_permission_set"
            android:text="@string/im_permission_set"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_sub_title2"
            app:layout_constraintBottom_toBottomOf="@+id/tv_sub_title2" />

        <TextView
            android:id="@+id/tv_sub_describe2"
            style="@style/permission_sub_describe1"
            android:text="@string/im_permission_sub_describe2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sub_title2" />

        <View
            android:id="@+id/line2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/gray_divider_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sub_describe2" />

        <TextView
            android:id="@+id/tv_sub_title3"
            style="@style/permission_sub_title"
            android:text="@string/im_permission_sub_title3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line2" />

        <TextView
            android:id="@+id/tv_sub_title3_set"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginEnd="15dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="12dp"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:background="@drawable/shape_permission_set"
            android:text="@string/im_permission_set"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_sub_title3"
            app:layout_constraintBottom_toBottomOf="@+id/tv_sub_title3" />

        <TextView
            android:id="@+id/tv_sub_describe3"
            style="@style/permission_sub_describe1"
            android:text="@string/im_permission_sub_describe3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sub_title3" />

        <View
            android:id="@+id/line3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/gray_divider_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sub_describe3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>