<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="telephone"
            type="String" />

        <variable
            name="password"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.user.login.LoginFragment">

        <LinearLayout
            android:id="@+id/ll_tel"
            style="@style/new_user_edit_line"
            android:layout_marginTop="0dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/login_edit_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                style="@style/line_img"
                android:src="@drawable/ic_phone"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/et_tel"
                style="@style/line_edit"
                android:hint="@string/tel_hint"
                android:inputType="phone"
                android:text="@={telephone}"
                android:textColor="@color/black"
                android:textColorHint="@color/blue_base"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_pwd"
            style="@style/new_user_edit_line"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/login_edit_bg"
            app:layout_constraintTop_toBottomOf="@id/ll_tel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                style="@style/line_img"
                android:src="@drawable/ic_pwd" />

            <EditText
                android:id="@+id/et_pwd"
                style="@style/line_edit"
                android:digits="@string/user_login_digits"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:maxLength="16"
                android:text="@={password}"
                android:textColor="@color/black"
                android:textColorHint="@color/blue_base"
                android:textSize="13sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_forget_psd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/user_login_forget_password"
            android:textColor="#A0A1A1"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_pwd" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginBottom="70dp"
            android:background="@drawable/login_btn_bg_blue"
            android:text="@string/user_login_login_now"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

