<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.login.RegisterFragment">

    <LinearLayout
        android:id="@+id/ll_tel"
        style="@style/new_user_edit_line"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/login_edit_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            style="@style/line_img"
            android:src="@drawable/ic_phone"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/et_tel"
            style="@style/line_edit"
            android:hint="@string/tel_hint"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textColorHint="@color/blue_base"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_id_card"
        style="@style/new_user_edit_line"
        android:background="@drawable/login_edit_bg"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_tel">

        <ImageView
            style="@style/line_img"
            android:src="@drawable/ic_id_card" />

        <EditText
            android:id="@+id/edit_id_card"
            style="@style/line_edit"
            android:digits="0123456789Xx"
            android:hint="@string/id_card_please"
            android:maxLength="18"
            android:textColor="@color/black"
            android:textColorHighlight="@color/blue_base"
            android:textColorHint="@color/blue_base"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_password_unlock"
        style="@style/new_user_edit_line"
        android:background="@drawable/login_edit_bg"
        app:layout_constraintTop_toBottomOf="@id/ll_id_card"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            style="@style/line_img"
            android:src="@drawable/ic_pwd" />

        <EditText
            android:id="@+id/edit_psd_unlock"
            style="@style/line_edit"
            android:digits="0123456789qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM"
            android:hint="@string/user_login_password_please"
            android:inputType="textPassword"
            android:maxLength="16"
            android:textColor="@color/black"
            android:textColorHighlight="@color/blue_base"
            android:textColorHint="@color/blue_base"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_confirm_password_unlock"
        style="@style/new_user_edit_line"
        android:background="@drawable/login_edit_bg"
        app:layout_constraintTop_toBottomOf="@id/ll_password_unlock"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            style="@style/line_img"
            android:src="@drawable/ic_pwd" />

        <EditText
            android:id="@+id/edit_confirm_psd_unlock"
            style="@style/line_edit"
            android:digits="0123456789qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM"
            android:hint="@string/user_login_password_confirm_register_please"
            android:inputType="textPassword"
            android:maxLength="16"
            android:textColor="@color/black"
            android:textColorHighlight="@color/blue_base"
            android:textColorHint="@color/blue_base"
            android:textSize="13sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/login_btn_bg_blue"
        android:text="@string/user_login_register_now"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>