<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include layout="@layout/head_title_view" />

    <!--背景-->
    <View
        android:id="@+id/view_blue"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/blue_base"
        app:layout_constraintHeight_percent="0.28"
        app:layout_constraintTop_toBottomOf="@+id/cons_head" />

    <View
        android:id="@+id/view_white"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/white_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.8" />


    <LinearLayout
        android:id="@+id/line_tel"
        style="@style/user_edit_line"
        android:background="@drawable/login_edit_bg"
        app:layout_constraintBottom_toBottomOf="@id/view_blue"
        app:layout_constraintTop_toTopOf="@id/view_white"
        tools:ignore="MissingConstraints">

        <ImageView
            style="@style/line_img"
            android:src="@drawable/ic_phone" />

        <EditText
            android:id="@+id/edit_tel"
            style="@style/line_edit"
            android:hint="@string/tel_hint"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textColorHint="@color/blue_base" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line_id_card"
        style="@style/user_edit_line"
        android:background="@drawable/login_edit_bg"
        app:layout_constraintTop_toBottomOf="@id/line_tel"
        tools:ignore="MissingConstraints">

        <ImageView
            style="@style/line_img"
            android:src="@drawable/ic_id_card" />

        <EditText
            android:id="@+id/edit_id_card"
            style="@style/line_edit"
            android:digits="0123456789Xx"
            android:hint="@string/id_card_please"
            android:maxLength="18"
            android:textColor="@color/black"
            android:textColorHighlight="@color/blue_base"
            android:textColorHint="@color/blue_base"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line_password_unlock"
        style="@style/user_edit_line"
        android:background="@drawable/login_edit_bg"
        app:layout_constraintTop_toBottomOf="@id/line_id_card"
        tools:ignore="MissingConstraints">

        <ImageView
            style="@style/line_img"
            android:src="@drawable/ic_pwd" />

        <EditText
            android:id="@+id/edit_psd"
            style="@style/line_edit"
            android:digits="0123456789qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM"
            android:hint="@string/password_please"
            android:inputType="textPassword"
            android:maxLength="16"
            android:textColor="@color/black"
            android:textColorHint="@color/blue_base" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line_password_lock"
        style="@style/user_edit_line"
        android:background="@drawable/login_edit_bg"
        app:layout_constraintTop_toBottomOf="@id/line_password_unlock"
        tools:ignore="MissingConstraints">

        <ImageView
            style="@style/line_img"
            android:src="@drawable/ic_pwd" />

        <EditText
            android:id="@+id/edit_psd_check"
            style="@style/line_edit"
            android:digits="0123456789qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM"
            android:hint="@string/password_confirm_register_please"
            android:inputType="textPassword"
            android:maxLength="16"
            android:textColor="@color/black"
            android:textColorHint="@color/blue_base" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_sure"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="27dp"
        android:background="@drawable/login_btn_bg_blue"
        android:text="@string/edit_sure"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".91" />
</androidx.constraintlayout.widget.ConstraintLayout>